--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
+    "vue-animate": "0.0.4",
     "vue-router": "^2.3.1",
     "vuetify": "^0.14.7",
     "vuex": "^2.3.1"
